--- a/day-7/php-project-7/composer.json
+++ b/day-7/php-project-7/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "php-project/php-project",
   "type": "project",
-  "description": "A Simple Calculator Project",
+  "description": "Php Simple Project",
   "keywords": [],
   "license": "",
   "require": {},
@@ -13,4 +13,3 @@
     }
   }
 }
-
